# c64jp

./: .gitattributes  .gitignore  LICENSE  Makefile  README-en.md  README.md
c/: CMakeLists.txt
c/include/: jtxt.h
c/oscar64/: Makefile  README-en.md  README.md
c/oscar64/src/: main.c
c/oscar64_crt/: Makefile  README-en.md  README.md  bench_bitmap.c  hello_easyflash.c  test_runtime.c
c/oscar64_crt/include/: jtxt.h
c/oscar64_crt/src/: jtxt.c  jtxt_bitmap.c  jtxt_charset.c  jtxt_resource.c  jtxt_text.c
c/oscar64_lib/: README-en.md  README.md
c/oscar64_lib/include/: c64_oscar.h  c64u_network.h  c64u_turbo.h  ime.h  jtxt.h
c/oscar64_lib/src/: c64u_network.c  ime.c  jtxt.c  jtxt_bitmap.c  jtxt_charset.c  jtxt_resource.c  jtxt_text.c
c/oscar64_qe/: Makefile  README-en.md  README.md
c/oscar64_qe/include/: ime.h
c/oscar64_qe/src/: ime.c  qe.c  screen.c
c/oscar64_term/: Makefile  README-en.md  README.md
c/oscar64_term/include/: telnet.h  xmodem.h
c/oscar64_term/src/: telnet.c  term_main.c  xmodem.c
c/src/: hello.c  ime.c  ime_test.c  jtxt.c  jtxt_bitmap.c  jtxt_charset.c  jtxt_resource.c  jtxt_text.c
c/src/qe/: Makefile  README.md  fio_test.c  qe.c
c/src/qe/lib/: kernal_getin.s  screen.c  screen.h
c/test/: test_jtxt.c
createcrt/: README-en.md  README.md  create_crt.py  kanji-magicdesk-basic.asm
dicconv/: README-en.md  README.md  dicconv.py  skkdic.txt
fontconv/: Makefile  README-en.md  README.md  mkfont.py
prog8/: README-en.md  README.md
stringresources/: README-en.md  README.md  convert_string_resources.py  test_strings.txt
(+16 files in other folders)
